--- a/GenFreeWin/GenFreeBase/GenFreeBase.csproj
+++ b/GenFreeWin/GenFreeBase/GenFreeBase.csproj
@@ -18,7 +18,13 @@
 	  <None Remove="obj\**" />
 	</ItemGroup>
 	<ItemGroup>
+	  <Compile Remove="Interfaces\Model\IHasValue.cs" />
+	</ItemGroup>
+	<ItemGroup>
 	  <PackageReference Include="System.Drawing.Common" Version="9.0.2" />
+	</ItemGroup>
+	<ItemGroup>
+	  <ProjectReference Include="..\..\CSharpBible\Libraries\BaseLib\BaseLib.csproj" />
 	</ItemGroup>
 
 </Project>
