--- a/GenFreeWin/GenFreeHelper/GenFreeHelper.csproj
+++ b/GenFreeWin/GenFreeHelper/GenFreeHelper.csproj
@@ -14,6 +14,9 @@
 		<None Remove="obj\**" />
 	</ItemGroup>
 	<ItemGroup>
+	  <Compile Remove="Helper\ObjectHelper.cs" />
+	</ItemGroup>
+	<ItemGroup>
 	  <PackageReference Include="Microsoft.VisualBasic" Version="10.3.0" />
 	</ItemGroup>
 	<ItemGroup>
