--- a/GenFreeWin/GenFreeBase/GenFreeBase.csproj
+++ b/GenFreeWin/GenFreeBase/GenFreeBase.csproj
@@ -21,10 +21,15 @@
 	  <Compile Remove="Interfaces\Model\IHasValue.cs" />
 	</ItemGroup>
 	<ItemGroup>
-	  <PackageReference Include="System.Drawing.Common" Version="9.0.2" />
+	  <PackageReference Include="System.Drawing.Common" Version="9.0.4" />
 	</ItemGroup>
 	<ItemGroup>
 	  <ProjectReference Include="..\..\CSharpBible\Libraries\BaseLib\BaseLib.csproj" />
+	</ItemGroup>
+	<ItemGroup>
+	  <Reference Include="System.Windows.Forms">
+	    <HintPath>..\..\..\..\Program Files (x86)\Reference Assemblies\Microsoft\Framework\.NETFramework\v4.7.2\System.Windows.Forms.dll</HintPath>
+	  </Reference>
 	</ItemGroup>
 
 </Project>
