--- a/GenFreeWin/GenFreeUIItfs/GenFreeUIItfs.csproj
+++ b/GenFreeWin/GenFreeUIItfs/GenFreeUIItfs.csproj
@@ -5,6 +5,7 @@
     <TargetFrameworks>net9.0-windows;net8.0-windows;net7.0-windows;net6.0-windows;net481</TargetFrameworks>
     <ImplicitUsings>disable</ImplicitUsings>
     <UseWindowsForms>True</UseWindowsForms>
+    <RootNamespace>GenFree</RootNamespace>
     <Nullable>enable</Nullable>
   </PropertyGroup>
   <Import Sdk="Microsoft.NET.Sdk" Project="Sdk.props" />
