--- a/GenFreeWin/GenFreeBase/GenFreeBase.csproj
+++ b/GenFreeWin/GenFreeBase/GenFreeBase.csproj
@@ -19,6 +19,7 @@
 	</ItemGroup>
 	<ItemGroup>
 	  <Compile Remove="Interfaces\Model\IHasValue.cs" />
+	  <Compile Remove="Interfaces\Sys\IHasValue.cs" />
 	</ItemGroup>
 	<ItemGroup>
 	  <PackageReference Include="System.Drawing.Common" Version="9.0.4" />
