--- a/GenFreeWin/GenFreeBaseClasses/GenFreeBaseClasses.csproj
+++ b/GenFreeWin/GenFreeBaseClasses/GenFreeBaseClasses.csproj
@@ -10,6 +10,9 @@
   <Import Sdk="Microsoft.NET.Sdk" Project="Sdk.props" />
   <Import Sdk="Microsoft.NET.Sdk" Project="Sdk.targets" />
   <ItemGroup>
+    <PackageReference Include="CommunityToolkit.Mvvm" Version="8.4.0" />
+  </ItemGroup>
+  <ItemGroup>
     <ProjectReference Include="..\..\CSharpBible\Libraries\BaseLib\BaseLib.csproj" />
     <ProjectReference Include="..\GenFreeBase\GenFreeBase.csproj" />
   </ItemGroup>
