--- a/GenFreeWin/GenFreeHelper/GenFreeHelper.csproj
+++ b/GenFreeWin/GenFreeHelper/GenFreeHelper.csproj
@@ -15,6 +15,7 @@
 	</ItemGroup>
 	<ItemGroup>
 	  <Compile Remove="Helper\ObjectHelper.cs" />
+	  <Compile Remove="Helper\StringHelper.cs" />
 	</ItemGroup>
 	<ItemGroup>
 	  <PackageReference Include="Microsoft.VisualBasic" Version="10.3.0" />
