--- a/GenFreeWin/GenFreeWinVm2/GenFreeWinVm2.csproj
+++ b/GenFreeWin/GenFreeWinVm2/GenFreeWinVm2.csproj
@@ -1,9 +1,10 @@
 ﻿<Project>
   <Import Project="..\GenFreeWin.props" />
   <PropertyGroup>
-    <TargetFrameworks>net481;net8.0</TargetFrameworks>
+    <TargetFrameworks>net481;net8.0-windows</TargetFrameworks>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <UseWindowsForms>true</UseWindowsForms>
   </PropertyGroup>
   <Import Sdk="Microsoft.NET.Sdk" Project="Sdk.props" />
   <Import Sdk="Microsoft.NET.Sdk" Project="Sdk.targets" />
