--- a/CSharpBible/Calc/Calc64WF/Calc64WF_net.csproj
+++ b/CSharpBible/Calc/Calc64WF/Calc64WF_net.csproj
@@ -24,7 +24,7 @@
 	<ItemGroup>
 		<ProjectReference Include="$(UpDir)\Libraries\MVVM_BaseLib\MVVM_BaseLib.csproj" />
 		<ProjectReference Include="..\Calc64Base\Calc64Base.csproj" />
-		<ProjectReference Condition="'$(TargetFrameWork.StartsWith(net4))'" Include="$(UpDir)\Libraries\WFSystem.Data\WFSystem.Windows.Data.csproj" />
+		<ProjectReference Include="$(UpDir)\Libraries\WFSystem.Data\WFSystem.Windows.Data.csproj" />
 	</ItemGroup>
 	<ItemGroup>
 		<Compile Update="Properties\Resources.Designer.cs">
