--- a/CSharpBible/Libraries/MathLibraryTests/MathLibraryTests.csproj
+++ b/CSharpBible/Libraries/MathLibraryTests/MathLibraryTests.csproj
@@ -1,7 +1,7 @@
 ﻿<Project>
 	<Import Project="..\Libraries.props" />
 	<PropertyGroup>
-    <TargetFrameworks>net481;net48;net472;net462</TargetFrameworks>
+    <TargetFrameworks>net481;net48;net472;net462;net8.0</TargetFrameworks>
     <IsPackable>false</IsPackable>
     <IsTestProject>true</IsTestProject>
   </PropertyGroup>
