--- a/GenFreeWin/GenFreeWin2/GenFreeWin2.csproj
+++ b/GenFreeWin/GenFreeWin2/GenFreeWin2.csproj
@@ -4,8 +4,9 @@
     <OutputType>WinExe</OutputType>
     <TargetFrameworks>net6.0-windows;net7.0-windows;net8.0-windows;net9.0-windows;net481</TargetFrameworks>
     <Nullable>enable</Nullable>
-    <UseWindowsForms>true</UseWindowsForms>
+    <UseWindowsForms>True</UseWindowsForms>
     <ImplicitUsings>disable</ImplicitUsings>
+    <PlatformTarget>x86</PlatformTarget>
   </PropertyGroup>
   <Import Sdk="Microsoft.NET.Sdk" Project="Sdk.props" />
   <Import Sdk="Microsoft.NET.Sdk" Project="Sdk.targets" />
@@ -19,6 +20,21 @@
     <ProjectReference Include="..\GenFreeWinForms\GenFreeWinForms.csproj" />
     <ProjectReference Include="..\GenFreeWinVm2\GenFreeWinVm2.csproj" />
     <ProjectReference Include="..\GenFreeBaseClasses\GenFreeBaseClasses.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Compile Update="Properties\Settings.Designer.cs">
+      <DesignTimeSharedInput>True</DesignTimeSharedInput>
+      <AutoGen>True</AutoGen>
+      <DependentUpon>Settings.settings</DependentUpon>
+    </Compile>
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="Properties\Settings.settings">
+      <Generator>SettingsSingleFileGenerator</Generator>
+      <LastGenOutput>Settings.Designer.cs</LastGenOutput>
+    </None>
   </ItemGroup>
 
 </Project>
