--- a/GenFreeWin/GenFreeWinForms/GenFreeWinForms.csproj
+++ b/GenFreeWin/GenFreeWinForms/GenFreeWinForms.csproj
@@ -1,11 +1,12 @@
 ﻿<Project>
   <Import Project="..\GenFreeWin.props" />
   <PropertyGroup>
+    <OutputType>Library</OutputType>
     <TargetFrameworks>net6.0-windows;net7.0-windows;net8.0-windows;net9.0-windows;net481</TargetFrameworks>
-    <ImplicitUsings>disable</ImplicitUsings>
-    <RootNamespace>GenFreeWin</RootNamespace>
-    <UseWindowsForms>True</UseWindowsForms>
     <Nullable>enable</Nullable>
+    <UseWindowsForms>True</UseWindowsForms>
+    <ImplicitUsings>disable</ImplicitUsings>
+    <PlatformTarget>x86</PlatformTarget>
   </PropertyGroup>
   <Import Sdk="Microsoft.NET.Sdk" Project="Sdk.props" />
   <Import Sdk="Microsoft.NET.Sdk" Project="Sdk.targets" />
@@ -18,6 +19,9 @@
   <ItemGroup>
     <Compile Update="Views\Adresse.cs">
       <SubType>Form</SubType>
+    </Compile>
+    <Compile Update="Views\FraEventShowEdit.cs">
+      <SubType>UserControl</SubType>
     </Compile>
     <Compile Update="Views\FraPersImpQuerry.cs">
       <SubType>UserControl</SubType>
