--- a/CSharpBible/Libraries/BaseLib/BaseLib.csproj
+++ b/CSharpBible/Libraries/BaseLib/BaseLib.csproj
@@ -6,12 +6,12 @@
 	</PropertyGroup>
 	<Import Sdk="Microsoft.NET.Sdk" Project="Sdk.props" />
 	<Import Sdk="Microsoft.NET.Sdk" Project="Sdk.targets" />
-	<PropertyGroup>
+	<PropertyGroup Condition="Exists('..\sgLib.snk')">
 		<ProduceReferenceAssembly>False</ProduceReferenceAssembly>
 		<UserSecretsId>4772c317-55ff-4251-b766-1c41dfb672e5</UserSecretsId>
 		<SignAssembly>True</SignAssembly>
 		<DelaySign>False</DelaySign>
-    <AssemblyOriginatorKeyFile>C:\Projekte\CSharp\CSharpBible\Libraries\sgLib.snk</AssemblyOriginatorKeyFile>
+    <AssemblyOriginatorKeyFile>..\sgLib.snk</AssemblyOriginatorKeyFile>
   </PropertyGroup>
 	<ItemGroup>
 		<Compile Remove="Properties\AssemblyInfo.cs" />
