--- a/GenFreeWin/GenFreeWin3/GenFreeWin3.csproj
+++ b/GenFreeWin/GenFreeWin3/GenFreeWin3.csproj
@@ -5,11 +5,27 @@
     <TargetFramework>net8.0-windows</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <RootNamespace>GenFreeWpf</RootNamespace>
     <UseWPF>true</UseWPF>
   </PropertyGroup>
 
   <ItemGroup>
+    <Page Remove="Views\MenueControl.xaml" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="Views\MenueControl.xaml">
+      <Generator>MSBuild:Compile</Generator>
+    </None>
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="9.0.5" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\..\CSharpBible\Libraries\MVVM_BaseLib\MVVM_BaseLib.csproj" />
+    <ProjectReference Include="..\GenFreeUIItfs\GenFreeUIItfs.csproj" />
   </ItemGroup>
 
 </Project>
