--- a/GenFreeWin/GenFreeHelper/GenFreeHelper.csproj
+++ b/GenFreeWin/GenFreeHelper/GenFreeHelper.csproj
@@ -22,5 +22,10 @@
 	<ItemGroup>
 	  <ProjectReference Include="..\GenFreeBase\GenFreeBase.csproj" />
 	</ItemGroup>
+	<ItemGroup>
+	  <Reference Include="System.Windows.Forms">
+	    <HintPath>..\..\..\..\Program Files (x86)\Reference Assemblies\Microsoft\Framework\.NETFramework\v4.7.2\System.Windows.Forms.dll</HintPath>
+	  </Reference>
+	</ItemGroup>
 
 </Project>
