--- a/CSharpBible/Libraries/MathLIbrary/MathLibrary.csproj
+++ b/CSharpBible/Libraries/MathLIbrary/MathLibrary.csproj
@@ -1,7 +1,7 @@
 <Project>
 	<Import Project="..\Libraries.props" />
 	<PropertyGroup>
-		<TargetFrameworks>net481;net48;net472;net462</TargetFrameworks>
+		<TargetFrameworks>net481;net48;net472;net462;net6.0;net7.0;net8.0;net9.0</TargetFrameworks>
 		<SignAssembly>True</SignAssembly>
 	</PropertyGroup>
 	<Import Sdk="Microsoft.NET.Sdk" Project="Sdk.props" />
