--- a/CSharpBible/Libraries/Libraries_net.props
+++ b/CSharpBible/Libraries/Libraries_net.props
@@ -4,7 +4,7 @@
     <BaseOutputPath>..\..\..\bin\$(MSBuildProjectName)\</BaseOutputPath>
     <BaseIntermediateOutputPath>..\..\..\obj.net\$(MSBuildProjectName)\</BaseIntermediateOutputPath>
     <RootNamespace>$(MSBuildProjectName.Replace(".","_").Replace("_net","").Replace("_win",""))</RootNamespace>
-    <LangVersion>12.0</LangVersion>
+    <LangVersion>latest</LangVersion>
     <Nullable>enable</Nullable>
     <ImplicitUsings>disable</ImplicitUsings>
     <SuppressTfmSupportBuildWarnings>true</SuppressTfmSupportBuildWarnings>
