--- a/GenFreeWin/GenFreeBaseTests/GenFreeBaseTests.csproj
+++ b/GenFreeWin/GenFreeBaseTests/GenFreeBaseTests.csproj
@@ -1,8 +1,8 @@
 ﻿<Project>
 	<Import Project="..\GenFreeWin.props" />
 	<PropertyGroup>
-		<TargetFrameworks>net481;net6.0;net7.0;net8.0</TargetFrameworks>
-		<Nullable>enable</Nullable>
+    <TargetFrameworks>net481;net6.0;net7.0;net8.0;net9.0</TargetFrameworks>
+    <Nullable>enable</Nullable>
 
 		<IsPackable>false</IsPackable>
 	</PropertyGroup>
@@ -28,7 +28,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<ProjectReference Include="..\..\CSharpBible\Libraries\MVVM_BaseLibTests\MVVM_BaseLibTests.csproj" />
+		<ProjectReference Include="..\..\CSharpBible\Libraries\BaseLibTests\BaseLibTests.csproj" />
 		<ProjectReference Include="..\GenFreeBase\GenFreeBase.csproj" />
 	</ItemGroup>
 
