--- a/GenFreeWin/GenFreeHelper/GenFreeHelper.csproj
+++ b/GenFreeWin/GenFreeHelper/GenFreeHelper.csproj
@@ -1,8 +1,8 @@
 ﻿<Project>
 	<Import Project="..\GenFreeWin.props" />
 	<PropertyGroup>
-		<TargetFrameworks>net8.0;net7.0;net6.0;net481</TargetFrameworks>
-		<ImplicitUsings>disable</ImplicitUsings>
+    <TargetFrameworks>net481;net6.0;net7.0;net8.0;net9.0</TargetFrameworks>
+    <ImplicitUsings>disable</ImplicitUsings>
 		<Nullable>enable</Nullable>
 		<RootNamespace>GenFree</RootNamespace>
 	</PropertyGroup>
