--- a/GenFreeWin/GenFreeHelperTests/GenFreeHelperTests.csproj
+++ b/GenFreeWin/GenFreeHelperTests/GenFreeHelperTests.csproj
@@ -1,8 +1,8 @@
 ﻿<Project>
 	<Import Project="..\GenFreeWin.props" />
 	<PropertyGroup>
-		<TargetFrameworks>net481;net6.0;net7.0;net8.0</TargetFrameworks>
-		<Nullable>enable</Nullable>
+    <TargetFrameworks>net481;net6.0;net7.0;net8.0;net9.0</TargetFrameworks>
+    <Nullable>enable</Nullable>
 
 		<IsPackable>false</IsPackable>
 	</PropertyGroup>
