--- a/WinAhnenNew/WinAhnenClsTests/WinAhnenClsTests.csproj
+++ b/WinAhnenNew/WinAhnenClsTests/WinAhnenClsTests.csproj
@@ -2,8 +2,8 @@
 	<Import Project="..\WinAhnen.props" />
 
 	<PropertyGroup>
-		<TargetFrameworks>net481;net6.0;net7.0;net8.0</TargetFrameworks>
-		<ImplicitUsings>disable</ImplicitUsings>
+    <TargetFrameworks>net481;net6.0;net7.0;net8.0;net9.0</TargetFrameworks>
+    <ImplicitUsings>disable</ImplicitUsings>
 		<Nullable>enable</Nullable>
 		<IsPackable>false</IsPackable>
 	</PropertyGroup>
