--- a/WinAhnenNew/BaseGenClassesTests/BaseGenClassesTests.csproj
+++ b/WinAhnenNew/BaseGenClassesTests/BaseGenClassesTests.csproj
@@ -11,6 +11,10 @@
   <ItemGroup>
     <PackageReference Include="MSTest" Version="3.9.0" />
     <PackageReference Include="NSubstitute" Version="5.3.0" />
+    <PackageReference Condition="$(TargetFramework.StartsWith(net4))" Include="IsExternalInit" Version="1.0.3">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
   </ItemGroup>
 
   <ItemGroup>
