--- a/GenFreeWin/VBUnObfusicatorTests/VBUnObfusicatorTests.csproj
+++ b/GenFreeWin/VBUnObfusicatorTests/VBUnObfusicatorTests.csproj
@@ -43,6 +43,7 @@
 		  <PrivateAssets>all</PrivateAssets>
 		  <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 		</PackageReference>
+		<PackageReference Include="NSubstitute" Version="5.3.0" />
 		<PackageReference Condition="$(TargetFramework.Contains('net4'))" Include="System.Text.Json" Version="9.0.5" />
 	</ItemGroup>
 
