--- a/GenFreeWin/GenFreeWinForms/GenFreeWinForms.csproj
+++ b/GenFreeWin/GenFreeWinForms/GenFreeWinForms.csproj
@@ -11,6 +11,9 @@
   <Import Sdk="Microsoft.NET.Sdk" Project="Sdk.props" />
   <Import Sdk="Microsoft.NET.Sdk" Project="Sdk.targets" />
   <ItemGroup>
+    <PackageReference Include="System.Drawing.Common" Version="9.0.6" />
+  </ItemGroup>
+  <ItemGroup>
     <ProjectReference Include="..\GenFreeBase\GenFreeBase.csproj" />
     <ProjectReference Include="..\GenFreeUIItfs\GenFreeUIItfs.csproj" />
     <ProjectReference Include="..\..\CSharpBible\Libraries\WFSystem.Data\WFSystem.Windows.Data.csproj" />
