--- a/GenFreeWin/mdbTool/mdbTool.csproj
+++ b/GenFreeWin/mdbTool/mdbTool.csproj
@@ -3,12 +3,13 @@
 	<PropertyGroup>
     <OutputType>Exe</OutputType>
 		<UseWindowsForms>True</UseWindowsForms>
-		<TargetFrameworks>net481</TargetFrameworks>
+		<TargetFrameworks>net481;net8.0-windows</TargetFrameworks>
 		<PlatformTarget>x86</PlatformTarget>
 	</PropertyGroup>
 	<Import Sdk="Microsoft.NET.Sdk" Project="Sdk.props" />
 	<Import Sdk="Microsoft.NET.Sdk" Project="Sdk.targets" />
 	<ItemGroup>
+	  <ProjectReference Include="..\GenDBImplOLEDB\GenDBImplOLEDB.csproj" />
 	  <ProjectReference Include="..\GenFreeWin\GenFreeWin.csproj" />
 	</ItemGroup>
 
