--- a/TestStatements/PluginBase/PluginBase.csproj
+++ b/TestStatements/PluginBase/PluginBase.csproj
@@ -5,12 +5,15 @@
 	<PropertyGroup>
 		<TargetFrameworks>net481;net6.0;net7.0;net8.0;net9.0</TargetFrameworks>
 		<Nullable>enable</Nullable>
-		<SignAssembly>True</SignAssembly>
-		<AssemblyOriginatorKeyFile>..\snKey.snk</AssemblyOriginatorKeyFile>
 	</PropertyGroup>
 	<Import Sdk="Microsoft.NET.Sdk" Project="Sdk.props" />
 	<Import Sdk="Microsoft.NET.Sdk" Project="Sdk.targets" />
+	<PropertyGroup Condition="Exists('..\sgKey.snk')">
+		<SignAssembly>True</SignAssembly>
+		<AssemblyOriginatorKeyFile>..\snKey.snk</AssemblyOriginatorKeyFile>
+	</PropertyGroup>
+
 	<ItemGroup>
-	  <PackageReference Include="CommunityToolkit.Mvvm" Version="8.4.0" />
+		<PackageReference Include="CommunityToolkit.Mvvm" Version="8.4.0" />
 	</ItemGroup>
 </Project>
