--- a/TestStatements/Solution_net.props
+++ b/TestStatements/Solution_net.props
@@ -2,11 +2,13 @@
   <PropertyGroup>
     <BaseOutputPath>..\..\bin\$(MSBuildProjectName)\</BaseOutputPath>
     <BaseIntermediateOutputPath>..\..\obj.net\$(MSBuildProjectName)\</BaseIntermediateOutputPath>
-    <LangVersion>13.0</LangVersion>
+    <LangVersion>preview</LangVersion>
     <Nullable>enable</Nullable>
     <ImplicitUsings>disable</ImplicitUsings>
     <Company>JC-Soft</Company>
     <Authors>Joe Care</Authors>
     <Copyright>Copyright © JC-Soft 2024</Copyright>
+	  <SuppressTfmSupportBuildErrors>true</SuppressTfmSupportBuildErrors>
+	  <SuppressTfmSupportBuildWarning>true</SuppressTfmSupportBuildWarning>
   </PropertyGroup>
 </Project>
