--- a/GenFreeWin/GenFreeBase/GenFreeBase.csproj
+++ b/GenFreeWin/GenFreeBase/GenFreeBase.csproj
@@ -22,7 +22,11 @@
 	</ItemGroup>
 	<ItemGroup>
 	  <PackageReference Include="System.Drawing.Common" Version="9.0.5" />
-	</ItemGroup>
+    <PackageReference Condition="$(TargetFramework.StartsWith(net4))" Include="IsExternalInit" Version="1.0.3">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+  </ItemGroup>
 	<ItemGroup>
 	  <ProjectReference Include="..\..\CSharpBible\Libraries\BaseLib\BaseLib.csproj" />
 	</ItemGroup>
