--- a/GenFreeWin/MdbBrowser/MdbBrowser.csproj
+++ b/GenFreeWin/MdbBrowser/MdbBrowser.csproj
@@ -4,7 +4,7 @@
 		<OutputType>WinExe</OutputType>
 		<TargetFrameworks>net481;net472;net462;net6.0-windows;net7.0-windows;net8.0-windows</TargetFrameworks>
 		<Nullable>enable</Nullable>
-    <PlatformTarget>x86</PlatformTarget>
+		<!--PlatformTarget>x86</PlatformTarget-->
 		<UseWPF>true</UseWPF>
 	</PropertyGroup>
 	<Import Sdk="Microsoft.NET.Sdk" Project="Sdk.props" />
