--- a/CSharpBible/Games/Games.props
+++ b/CSharpBible/Games/Games.props
@@ -3,12 +3,13 @@
 		<UpDir>..\..</UpDir>
 		<BaseOutputPath>..\..\..\bin\$(MSBuildProjectName)\</BaseOutputPath>
 		<BaseIntermediateOutputPath>..\..\..\obj\$(MSBuildProjectName)\</BaseIntermediateOutputPath>
-		<LangVersion>12.0</LangVersion>
+    <RootNamespace>$(MSBuildProjectName.Replace("_Base",""))</RootNamespace>
+    <LangVersion>preview</LangVersion>
 		<Nullable>enable</Nullable>
 		<DefineConstants>NULLABLE</DefineConstants>
 		<ImplicitUsings>disable</ImplicitUsings>
 		<Company>JC-Soft</Company>
 		<Authors>Joe Care</Authors>
-		<Copyright>Copyright © JC-Soft 2024</Copyright>		
+		<Copyright>Copyright © JC-Soft 2025</Copyright>		
 	</PropertyGroup>
 </Project>
