--- a/CSharpBible/Games/Games_net.props
+++ b/CSharpBible/Games/Games_net.props
@@ -3,12 +3,12 @@
 		<UpDir>..\..</UpDir>
 		<BaseOutputPath>..\..\..\bin\$(MSBuildProjectName)\</BaseOutputPath>
 		<BaseIntermediateOutputPath>..\..\..\obj.net\$(MSBuildProjectName)\</BaseIntermediateOutputPath>
-		<RootNamespace>$(MSBuildProjectName.Replace(".","_").Replace("_net",""))</RootNamespace>
-		<LangVersion>12.0</LangVersion>
+		<RootNamespace>$(MSBuildProjectName.Replace(".","_").Replace("_net","").Replace("_Base",""))</RootNamespace>
+		<LangVersion>preview</LangVersion>
 		<Nullable>enable</Nullable>
 		<ImplicitUsings>disable</ImplicitUsings>
 		<Company>JC-Soft</Company>
 		<Authors>Joe Care</Authors>
-		<Copyright>Copyright © JC-Soft 2024</Copyright>
+		<Copyright>Copyright © JC-Soft 2025</Copyright>
 	</PropertyGroup>
 </Project>
