--- a/CSharpBible/Games/HexaBan_Console/HexaBan_ConsoleLnx.csproj
+++ b/CSharpBible/Games/HexaBan_Console/HexaBan_ConsoleLnx.csproj
@@ -12,6 +12,10 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.22.1" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="9.0.8" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\HexaBan\HexaBan.csproj" />
   </ItemGroup>
 
 </Project>
