--- a/CSharpBible/Games/HexaBan_Console/HexaBan_ConsoleWin.csproj
+++ b/CSharpBible/Games/HexaBan_Console/HexaBan_ConsoleWin.csproj
@@ -12,6 +12,7 @@
   <Import Sdk="Microsoft.NET.Sdk" Project="Sdk.targets" />
   <ItemGroup>
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.22.1" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="9.0.8" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\HexaBan\HexaBan.csproj" />
