--- a/CSharpBible/Games/Galaxia_UI.Tests/Galaxia_UI.Tests.csproj
+++ b/CSharpBible/Games/Galaxia_UI.Tests/Galaxia_UI.Tests.csproj
@@ -1,12 +1,11 @@
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFramework>net8.0</TargetFramework>
+    <TargetFramework>net9.0</TargetFramework>
     <IsPackable>false</IsPackable>
     <Nullable>enable</Nullable>
   </PropertyGroup>
   <ItemGroup>
     <ProjectReference Include="..\Galaxia_UI\Galaxia_UI.csproj" />
-    <PackageReference Include="MSTest.TestAdapter" Version="3.3.1" />
-    <PackageReference Include="MSTest.TestFramework" Version="3.3.1" />
+    <PackageReference Include="MSTest" Version="3.3.1" />
   </ItemGroup>
 </Project>
