--- a/TestStatements/AppWithPlugin/AppWithPlugin.csproj
+++ b/TestStatements/AppWithPlugin/AppWithPlugin.csproj
@@ -15,6 +15,9 @@
 		<DefineConstants>$(DefineConstants);SIGNED_BUILD</DefineConstants>
 	</PropertyGroup>
 	<ItemGroup>
+	  <None Remove="net9.0 - Verknüpfung.lnk" />
+	</ItemGroup>
+	<ItemGroup>
 		<PackageReference Include="CommunityToolkit.Mvvm" Version="8.4.0" />
 		<PackageReference Include="Microsoft.Extensions.Configuration.UserSecrets" Version="9.0.6" />
 		<PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="9.0.6" />
