--- a/TestStatements/HelloPlugin/HelloPlugin.csproj
+++ b/TestStatements/HelloPlugin/HelloPlugin.csproj
@@ -15,6 +15,10 @@
 		<AssemblyOriginatorKeyFile>..\snKey.snk</AssemblyOriginatorKeyFile>
 	</PropertyGroup>
 	<ItemGroup>
+	  <None Remove="App-Link.lnk" />
+	  <None Remove="net9.0 - Verknüpfung.lnk" />
+	</ItemGroup>
+	<ItemGroup>
 		<PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="9.0.6" ExcludeAssets="runtime" />
 	</ItemGroup>
 	<ItemGroup>
