--- a/GenFreeWin/GenFreeBrowser/GenFreeBrowser.csproj
+++ b/GenFreeWin/GenFreeBrowser/GenFreeBrowser.csproj
@@ -16,6 +16,10 @@
     <Page Remove="obj\**" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="9.0.9" />
+    <PackageReference Include="Microsoft.Extensions.Http.Polly" Version="9.0.9" />
+  </ItemGroup>
+  <ItemGroup>
     <ProjectReference Include="..\..\CSharpBible\Libraries\BaseLib\BaseLib.csproj" />
     <ProjectReference Include="..\..\CSharpBible\Libraries\MVVM_BaseLib\MVVM_BaseLib.csproj" />
     <ProjectReference Include="..\GenFreeData\GenFreeData.csproj" />
