--- a/GenFreeWin/MapDemo/MapDemo.csproj
+++ b/GenFreeWin/MapDemo/MapDemo.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <OutputType>WinExe</OutputType>
     <TargetFramework>net9.0-windows</TargetFramework>
@@ -11,5 +11,6 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="9.0.9" />
+    <!-- CommunityToolkit.Mvvm removed: provided transitively via MVVM_BaseLib -->
   </ItemGroup>
 </Project>
