--- a/CSharpBible/ConsoleApps/TestConsoleDemo/TestConsoleDemo.csproj
+++ b/CSharpBible/ConsoleApps/TestConsoleDemo/TestConsoleDemo.csproj
@@ -4,6 +4,7 @@
 		<TargetFramework>net6.0-windows</TargetFramework>
 		<UseWindowsForms>true</UseWindowsForms>
 		<OutputType>WinExe</OutputType>
+		<LangVersion>preview</LangVersion>
 	</PropertyGroup>
 	<Import Sdk="Microsoft.NET.Sdk" Project="Sdk.props" />
 	<Import Sdk="Microsoft.NET.Sdk" Project="Sdk.targets" />
