--- a/GenFreeWin/PlaceAuthorityConsoleDemo/PlaceAuthorityConsoleDemo.csproj
+++ b/GenFreeWin/PlaceAuthorityConsoleDemo/PlaceAuthorityConsoleDemo.csproj
@@ -10,4 +10,8 @@
     <ProjectReference Include="..\..\CSharpBible\Libraries\ExtendedConsole\ExtendedConsole.csproj" />
     <ProjectReference Include="..\GenFreeBrowser\GenFreeBrowser.csproj" />
   </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="9.0.9" />
+    <PackageReference Include="CommunityToolkit.Mvvm" Version="8.4.0" />
+  </ItemGroup>
 </Project>
