--- a/GenFreeWin/GenFreeBrowser.Tests/GenFreeBrowser.Tests.csproj
+++ b/GenFreeWin/GenFreeBrowser.Tests/GenFreeBrowser.Tests.csproj
@@ -12,8 +12,8 @@
   </ItemGroup>
 
   <ItemGroup>
-		<PackageReference Include="MSTest.TestFramework" Version="3.11.0" />
-		<PackageReference Include="MSTest.TestAdapter" Version="3.11.0" />
+		<PackageReference Include="Microsoft.NET.Test.Sdk" Version="18.0.0" />
+		<PackageReference Include="MSTest" Version="3.11.0" />
 		<PackageReference Include="coverlet.collector" Version="6.0.4">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
