--- a/CSharpBible/Calc/Calc64BaseTests/Calc64BaseTests.csproj
+++ b/CSharpBible/Calc/Calc64BaseTests/Calc64BaseTests.csproj
@@ -1,5 +1,5 @@
 ﻿<Project>
-	<Import Project="..\Calc.props" />
+	<Import Project="..\Calc_net.props" />
 	<PropertyGroup>
 		<TargetFrameworks>net462;net472;net48;net481;net6.0;net7.0;net8.0;net9.0</TargetFrameworks>
 	</PropertyGroup>
