--- a/Transpiler_pp/TranspilerConsTest/TranspilerConsTest.csproj
+++ b/Transpiler_pp/TranspilerConsTest/TranspilerConsTest.csproj
@@ -2,7 +2,7 @@
 	<Import Project="..\Transpiler.Props" />
 	<PropertyGroup>
 		<OutputType>Exe</OutputType>
-		<TargetFrameworks>net8.0-windows</TargetFrameworks>
+		<TargetFrameworks>net8.0-windows;net9.0-windows</TargetFrameworks>
 		<Nullable>enable</Nullable>
 	</PropertyGroup>
 	<Import Sdk="Microsoft.NET.Sdk" Project="Sdk.props" />
