--- a/GenFreeWin/GenFreeBrowser.Tests/GenFreeBrowser.Tests.csproj
+++ b/GenFreeWin/GenFreeBrowser.Tests/GenFreeBrowser.Tests.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFramework>net9.0-windows</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
@@ -13,7 +13,7 @@
 
   <ItemGroup>
 		<PackageReference Include="Microsoft.NET.Test.Sdk" Version="18.0.0" />
-		<PackageReference Include="MSTest" Version="3.11.0" />
+		<PackageReference Include="MSTest" Version="4.0.0" />
 		<PackageReference Include="coverlet.collector" Version="6.0.4">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
