--- a/GenFreeWin/VBUnObfusicator/VBUnObfusicator.csproj
+++ b/GenFreeWin/VBUnObfusicator/VBUnObfusicator.csproj
@@ -2,7 +2,7 @@
 	<Import Project="..\GenFreeWin.props" />
 	<PropertyGroup>
 		<OutputType>WinExe</OutputType>
-		<TargetFrameworks>net481;net6.0-windows;net7.0-windows;net8.0-windows</TargetFrameworks>
+		<TargetFrameworks>net481;net6.0-windows;net7.0-windows;net8.0-windows;net9.0-windows</TargetFrameworks>
 		<Nullable>enable</Nullable>
 		<UseWPF>true</UseWPF>
 	</PropertyGroup>
@@ -17,7 +17,7 @@
 	<ItemGroup>
 		<PackageReference Condition="$(TargetFramework.Contains('net4'))" Include="IsExternalInit" Version="1.0.3" />
 		<PackageReference Include="CommunityToolkit.Mvvm" Version="8.4.0" />
-		<PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="9.0.6" />
+		<PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="9.0.9" />
 		<PackageReference Include="Microsoft.Xaml.Behaviors.Wpf" Version="1.1.135" />
 	</ItemGroup>
 	<ItemGroup>
